# QuantSys

./: .gitignore  CLAUDE.md  README.md  implementation_plan.md  pyproject.toml  quant_cli.py  test_quant_system.py
data/: view.sh
docs/: data-cli-guide.md  database-schema.md
docs/plans/: 2026-02-21-quant-trading-system-design.md  2026-02-23-factor-library-design.md  2026-02-23-factor-library-impl-plan.md
quantsys/: __init__.py
quantsys/agent/: __init__.py  context_manager.py  core.py  llm_client.py  skill_registry.py
quantsys/backtest/: __init__.py  engine.py  events.py  execution.py  metrics.py  portfolio.py
quantsys/cli/: __init__.py  backtest_commands.py  chat_mode.py  data_commands.py  paper_commands.py
quantsys/config/: .env.example  __init__.py  settings.py
quantsys/data/: __init__.py  adjuster.py  collector.py  database.py  symbols.py  validator.py
quantsys/factor/: __init__.py  engine.py  operators.py  registry.py
quantsys/factor/definitions/: wq101_momentum.yaml  wq101_reversal.yaml  wq101_volatility.yaml
quantsys/paper/: __init__.py  account.py  manager.py
quantsys/skills/backtest/: SKILL.md
quantsys/skills/code_generate/: SKILL.md  generator.py
quantsys/skills/data_query/: SKILL.md
quantsys/skills/factor_analysis/: SKILL.md
quantsys/strategy/: __init__.py  base.py  loader.py  optimizer.py
tests/unit/: test_backtest.py  test_database.py  test_factor_engine.py  test_factor_integration.py  test_factor_registry.py  test_operators.py  test_strategy_factors.py  test_symbols.py  test_validator.py  test_wq101.py
(+3 files in other folders)
